src/objects/Brand_Details__c.object
<CustomObject>
    <description>Brand Details</description>
    <fields>
        <fullName>Barcode_on_Product_verified__c</fullName>
        <label>Barcode on Product verified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Age__c</fullName>
        <description>Brand Age</description>
        <inlineHelpText>Brand Age</inlineHelpText>
        <label>Brand Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Authority_Letter_Submitted__c</fullName>
        <label>Brand Authority Letter Submitted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Banner__c</fullName>
        <description>Brand Banner</description>
        <inlineHelpText>Brand Banner</inlineHelpText>
        <label>Brand Banner</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Description__c</fullName>
        <description>Brand Description</description>
        <inlineHelpText>Brand Description</inlineHelpText>
        <label>Brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Logo__c</fullName>
        <description>Brand Logo</description>
        <inlineHelpText>Brand Logo</inlineHelpText>
        <label>Brand Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <description>Brand Name</description>
        <inlineHelpText>Brand Name</inlineHelpText>
        <label>Brand Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_warranty_Tenure__c</fullName>
        <label>Brand warranty Tenure?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_warranty_available__c</fullName>
        <label>Brand warranty available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Catalog_Images_Shared__c</fullName>
        <label>Catalog Images Shared?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_have_EAN_UPC__c</fullName>
        <description>EAN / UPC</description>
        <inlineHelpText>EAN / UPC</inlineHelpText>
        <label>Does have EAN/UPC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Brand Details</relationshipLabel>
        <relationshipName>Brand_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_verification_done__c</fullName>
        <description>Sample verification done</description>
        <label>Sample verification done?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_Chart_Available__c</fullName>
        <label>Size Chart Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcategories_Selling_in__c</fullName>
        <label>Subcategories Selling in</label>
        <picklist>
            <picklistValues>
                <fullName>Item 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Warranty__c</fullName>
        <label>Type of Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>Item 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical_Groups_Selling_BGM__c</fullName>
        <label>Vertical Groups Selling in</label>
        <picklist>
            <picklistValues>
                <fullName>Item 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical_Groups_Selling_in__c</fullName>
        <label>Vertical Groups Selling in</label>
        <picklist>
            <picklistValues>
                <fullName>Item 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verticals_Selling_CCC__c</fullName>
        <label>Verticals Selling in</label>
        <picklist>
            <picklistValues>
                <fullName>Item 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Brand Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>